Ajout des voters pour la page d'édition des users

--- a/oflix/config/packages/security.yaml
+++ b/oflix/config/packages/security.yaml
@@ -41,6 +41,8 @@ security:
 
         # Il faut avoir le rôle ROLE_ADMIN pour afficher le backoffice
         - { path: ^/backoffice, roles: ROLE_ADMIN }
+        # - { path: ^/user, roles: ROLE_ADMIN }
+
     # Système d'héritage
     role-hierarchy:
         # Un ROLE_ADMIN peut faire, tout ce que fait un ROLE_USER
