Ajout d'un token pour l'api

--- a/oflix/config/packages/security.yaml
+++ b/oflix/config/packages/security.yaml
@@ -15,6 +15,19 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -38,6 +51,9 @@ security:
     access_control:
         # Il faut être connecté (ROLE_USER) pour afficher les pages /tvshow
         # - { path: ^/tvshow, roles: ROLE_USER }
+
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
         # Il faut avoir le rôle ROLE_ADMIN pour afficher le backoffice
         - { path: ^/backoffice, roles: ROLE_ADMIN }
